# Major_pr

Blaze-wallet/blaze_wallet/: pyproject.toml
Blaze-wallet/blaze_wallet/src/blaze_wallet/: app.py  db_inititalization.py
Blaze-wallet/blaze_wallet/src/blaze_wallet/utils/: utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  ParticleBackground.tsx  theme-provider.tsx
frontend/src/context/: UserContext.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  ReceivePage.tsx  SendPage.tsx  SignUpPage.tsx
