[project]
name = "blaze-wallet"
version = "0.1.0"
description = ""
authors = [
    {name = "BhargavBunty",email = "bhargavbunty@059gmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "tensorflow (>=2.0,<3.0)",
    "keras (>=3.9.0,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "face-recognition (>=1.3.0,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
]

[tool.poetry]
package-mode = false
packages = [{include = "blaze_wallet", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
